[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/CardNFT/CardNFT.gd" type="Script" id=1]
[ext_resource path="res://Assets/NFT/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/NFT/backup/1.png" type="Texture" id=3]

[node name="CardNFT" type="Node2D"]
script = ExtResource( 1 )

[node name="NFT" type="Sprite" parent="."]
visible = false
position = Vector2( 64.375, 89.375 )
scale = Vector2( 0.112165, 0.111558 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 125.0
margin_bottom = 173.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="focus_exited" from="TextureButton" to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
